--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -4,3 +4,11 @@ body{
     max-width: 1280px;
     margin: 0 auto;
 }
+
+.carrossel{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
