Estilizando a parte do conteúdo definindo um pouco do posicionamento.

--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -20,3 +20,10 @@ body{
 .informacoes.ativa{
     display: block;
 }
+
+.conteudo {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	min-height: 100vh;
+}
