--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -27,3 +27,11 @@ body{
 	justify-content: space-evenly;
 	min-height: 100vh;
 }
+
+.informacoes h1 {
+	font-size: 35px;
+	color: #ffffff;
+	margin-bottom: 80px;
+	font-family: "GOT";
+	letter-spacing: 8px;
+}
